<resources>
    <string name="app_name">Malware Detection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_apk">Add APK</string>
    <string name="apk_list">APK List</string>
    <string name="settings">Settings</string>
    <string name="add_apk_desc">Upload APK untuk dilakukan ekstraksi fitur sebelum dilakukan pengecekan</string>
    <string name="upload_desc">Pencet untuk Upload APK</string>
    <string name="upload_btn">Upload APK</string>
    <string name="preparing_apk">Preparing APK...</string>
    <string name="clear_upload">Clear Upload</string>
    <string name="settings_desc">Atur penampilan aplikasi berdasarkan mode gelap atau terang</string>
    <string name="dark_mode">Dark mode</string>
    <string name="dark_mode_desc">Aktifkan mode gelap untuk tampilan yang nyaman dalam cahaya redup</string>
    <string name="mdns">mDNS</string>
    <string name="connect_mdns">Connect mDNS</string>
    <string name="service_name">Service Name:</string>
    <string name="service_name_placeholder">Name Placeholder</string>
    <string name="service_url">Service Url:</string>
    <string name="url_placeholder">Url Placeholder</string>
    <string name="apk_list_desc">Daftar APK yang telah diupload beserta status dari masing masing eksktraksi</string>
    <string name="res_desc">Berikut adalah informasi mengenai APK yang telah dilakukan ekstraksi</string>
    <string name="tflite_is_not_initialized_yet">TfLite is not initialized yet</string>
    <string name="tab_add">Add APK</string>
    <string name="tab_scan">Scan APK</string>
    <string name="scan_apk">Scan APK</string>
    <string name="scan_apk_desc">Scan APK dari perangkat untuk mengetahui apakah terdapat aplikasi berbahaya pada perangkat</string>
    <string name="apk_size_format">APK Size = %.2f %s</string>
</resources>